# tablut

./: .gitignore  CMakeLists.txt  README.md  compile.sh
include/: board.h  piece.h  pieceTextures.h  tablutConstants.h  tablutGame.h  util.h
src/: board.cpp  main.cpp  piece.cpp  pieceTextures.cpp  tablutGame.cpp  util.cpp
